feat: add total players in frontend controller, handlebars view

--- a/src/views/in-game.handlebars
+++ b/src/views/in-game.handlebars
@@ -4,7 +4,7 @@
 
     <section class="team-container">
     <h2 class='team-name'>1</h2>
-    <h1>Players: 2/2</h1>
+    <h1>Players: {{totalPlayersInTeam}}</h1>
     <div class="team-info">
 
      <ul>
@@ -33,7 +33,7 @@
 
  <section class="team-container">
     <h2 class='team-name'>2</h2>
-    <h1>Players: 2/2</h1>
+    <h1>Players: {{totalPlayersInTeam}}</h1>
     <div class="team-info">
     <ul>
       {{#each team2Usernames}}
