fix: timer, elements id

--- a/src/views/in-game.handlebars
+++ b/src/views/in-game.handlebars
@@ -24,11 +24,11 @@
       <span>:</span>
       <span id="score-team2">0</span>
     </h3>
-    <h3 id="round">Round 1 </h3>
-    <h3 id="active-team">Team 1 </h3>
-    <h3 id="explanaitor">Player {username} explaining </h3>
+    <h3 id="round"></h3>
+    <h3 >Team<span id="active-team"></span> turn </h3>
+    <h3 >Player <span id="explanaitor"></span> explaining </h3>
 
-    <h3 class="time" id="timer">Time left: 00:45</h3>
+    <h3 class="time" >Time left: <span id="timer"></span></h3>
   </section>
 
  <section class="team-container">
