--- a/src/views/in-game.handlebars
+++ b/src/views/in-game.handlebars
@@ -48,21 +48,21 @@
   </div>
   
   
-  <section class='chat secret' id="secret-word">
+  <section class='chatGame secret' id="secret-word">
     <p id="secret"></p>
   </section>
- <section class='chat explanation' id="chat-explanation">
+ <section class='chatGame explanation' id="chat-explanation">
     <ul class="chat-explanation__message-list" id="chat-explanation__message-list">
   
     </ul>
   </section>
-  <section class='chat guess' id="chat-guess">
+  <section class='chatGame guess' id="chat-guess">
     <ul class="chat-guess__message-list" id="chat-guess__message-list">
     
     </ul>
   </section>
 <form class="chat-form">
-  <textarea id="chat-input-field" class="chat inputfield" rows="5" placeholder="Type your message here..."></textarea><br>
+  <textarea id="chat-input-field" class="chatGame inputfield" rows="5" placeholder="Type your message here..."></textarea><br>
   <button type="submit" class='button chatSend' id="chat-send-button">Send</button>
 </form>
   </div>
