--- a/src/views/gameLobby.handlebars
+++ b/src/views/gameLobby.handlebars
@@ -9,7 +9,7 @@
     <div id='game-lobby-lists-wrapper'>
     <div class='game-lobby__teams'>
       <div class='game-lobby__team1'>
-        <h4>Team 1</h4>
+      
 
         <ul class='team1__list' id='team1-list'>
 
@@ -26,11 +26,11 @@
         </ul>
 
         <button class='button button-join-team1' id='button-join-team1'>Join
-          Team1</button>
+          Team A</button>
       </div>
 
       <div class='game-lobby__team2'>
-        <h4>Team 2</h4>
+        
 
         <ul class='team2__list' id='team2-list'>
 
@@ -47,7 +47,7 @@
         </ul>
 
         <button class='button button-join-team2' id='button-join-team2'>Join
-          Team2</button>
+          Team B</button>
       </div>
     </div>
     <div class='game-lobby__waiting__wrapper'>
