fix: game list filter, add difficulty

--- a/src/views/partials/filterGamesForm.handlebars
+++ b/src/views/partials/filterGamesForm.handlebars
@@ -5,6 +5,7 @@
       <option value=''>All</option>
       <option value='lobby'>Lobby</option>
       <option value='inProgress'>Running</option>
+      <option value='finished'>Finished</option>
     </select>
   </div>
 
@@ -26,6 +27,16 @@
       min='1'
       placeholder='Time in minutes'
     />
+  </div>
+
+  <div>
+    <label class='label' for='difficulty'>difficulty</label>
+    <select name='difficulty'>
+      <option value=''>All</option>
+      <option value='easy'>Easy</option>
+      <option value='medium'>Medium</option>
+      <option value='hard'>Hard</option>
+    </select>
   </div>
 
   <button type='submit' class='button'>Filter Games</button>
