feat: game preview frontend

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -11,6 +11,7 @@
     <link rel='stylesheet' href='/css/userProfile.css' />
     <link rel='stylesheet' href='/css/main.css' />
     <link rel='stylesheet' href='/css/newGame.css' />
+    <link rel="stylesheet" href="/css/gameSummary.css">
     <link rel='stylesheet' href='/css/footer.css' />
 
     <script src='/js/axios/axios.min.js'></script>
