--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang='en'>
   <head>
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
@@ -11,6 +10,7 @@
     <link rel='stylesheet' href='/css/userProfile.css' />
     <link rel='stylesheet' href='/css/main.css' />
     <link rel='stylesheet' href='/css/newGame.css' />
+    <link rel='stylesheet' href='/css/errorPage.css' />
     <link rel='stylesheet' href='/css/footer.css' />
 
     <script src='/js/axios/axios.min.js'></script>
