fix: delete user icon from error page

--- a/src/views/error-page.handlebars
+++ b/src/views/error-page.handlebars
@@ -1,4 +1,4 @@
-{{> navbar}}
+{{> basicNavbar}}
 <main class="error-page wrapper wrapper--column">
     <div class="error-group">
         <p class="status-message">{{statusMessage}}</p>
