refactor: user game history display

--- a/src/public/css/modal.css
+++ b/src/public/css/modal.css
@@ -37,6 +37,7 @@
 
 #optionsModal .modal-content {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
