--- a/src/views/gameLobby.handlebars
+++ b/src/views/gameLobby.handlebars
@@ -10,11 +10,11 @@
          <div class='game-lobby__waiting__wrapper'>
       <h2>Waiting players: </h2>
       <ul class='game-lobby__waiting__list' id='waiting-list'>
-        {{#each game.playerJoined as |player|}}
+        {{#each waitingUsernames}}
 
           <li class='game-lobby__waiting__item'>
 
-            {{player}}
+            {{this}}
 
           </li>
 
