feat: data gathering

--- a/src/views/game-summary.handlebars
+++ b/src/views/game-summary.handlebars
@@ -33,6 +33,7 @@
                     
                     
                 </ul>
+                <a href="/" class="button button--outline">back</a>
             </section>
             <section>
                 <div class="game-preview">
