--- a/src/public/css/gameSummary.css
+++ b/src/public/css/gameSummary.css
@@ -1,15 +1,27 @@
 .game-summary {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 
 .game-summary h1 {
-    font-size: 24px;
-    text-align: center;
+  font-size: 24px;
+  text-align: center;
 }
 
 .game-summary .wrapper {
-    padding-top: 20px;
-    gap: 20px;
+  padding-top: 20px;
+  gap: 20px;
+}
+
+.game-summary .log {
+  font-size: 0.9rem;
+  display: flex;
+  gap: 0.8rem;
+  margin-bottom: 0.8rem;
+}
+
+.game-summary .log--des {
+  font-weight: 800;
+  background-color: lightblue;
 }
 
 .game-summary .button {
@@ -18,15 +30,17 @@
 }
 
 .game-summary section {
-    flex: 1;
+  flex: 1;
 }
 
 .game-preview {
-    border: 1px solid black;
-    height: 100%;
-    border-radius: 6px;
+  padding: 1rem;
+  border: 1px solid black;
+  height: 100%;
+  border-radius: 6px;
+  overflow: auto;
+  max-height: 300px;
 }
-
 
 .game-summary__item {
   padding: 8px;
