--- a/src/views/game-summary.handlebars
+++ b/src/views/game-summary.handlebars
@@ -36,9 +36,16 @@
                 <a href="/" class="button button--outline">back</a>
             </section>
             <section>
-                <div class="game-preview">
-
-                </div>
+                <ul class="game-preview">
+                    {{#each gameLogs as | log i |}}
+                        {{#if log.description}}
+                        <li class="log log--des"><b>{{i}}. Description</b> <span>Round: {{log.roundNumber}}</span>|<span>Team: {{log.team}}</span>|<span>{{log.description}}</span>|<span>DescriberID: {{log.describerId}}</span></li>
+                        {{/if}}
+                        {{#if log.response}}
+                            <li class="log"><b>{{i}}. Response</b><span>Round: {{log.roundNumber}}</span>|<span>Team: {{log.team}}</span>|<span>{{log.response}}</span></li>
+                        {{/if}}
+                    {{/each}}
+                </ul>
             </section>
         </div>
     {{/if}}
