fix: route /history/:id

--- a/src/views/partials/userProfile.handlebars
+++ b/src/views/partials/userProfile.handlebars
@@ -40,7 +40,7 @@
 
 <script>
   function navigateToGameHistory(gameId) {
-    window.location.replace(`/api/v1/gameRooms/history/${gameId}`);
+    window.location.replace(`/history/${gameId}`);
   }
 </script>
 
